# worktime

./: .gitignore  MIGRATION_PLAN.md  README.md  build.sh  buildozer.spec  pyproject.toml  requirements.txt  settings.json  version.json  work_time.db  work_time_flet.db  образец_26.xlsx  январь_26.xlsx
.github/workflows/: android.yml  build.yml
work_timer_app/: .gitignore  main.py  worktimer.kv
work_timer_app/database/: database_manager.py
work_timer_app/screens/: add_edit_screen.py  history_screen.py  main_screen.py  settings_screen.py  Основные компоненты и предлагаемые модул.ini
work_timer_flet/: calculator.py  database_manager.py  flet.yaml  main.py  requirements.txt  updater.py
work_timer_flet/views/: add_edit_view.py  history_view.py  main_view.py  settings_view.py
