[project]
# Основная информация о проекте
name = "work_timer"
version = "1.0.1"
dependencies = [
    "flet",
    "requests",
    "packaging",
]

[tool.flet]
# Секция для настроек Flet

target_arch = ["arm64-v8a"]

[tool.flet.app]
# Путь к папке с исходным кодом вашего приложения
path = "work_timer_flet"

[tool.flet.build.apk]
# Настройки для сборки APK
package_name = "com.dmitrimailov.worktimer"
build_number = 3
permissions = [
    "INTERNET",
    "ACCESS_NETWORK_STATE",
]