[project]
# Основная информация о проекте
name = "work_timer"
version = "1.0.1"
dependencies = [
    "flet",
    "requests",
    "packaging",
]

[tool.flet]
# Секция для настроек Flet

[tool.flet.app]
# Путь к папке с исходным кодом вашего приложения
path = "work_timer_flet"
# Исключаем всё лишнее, чтобы уменьшить размер APK.
# Особенно важно исключить .venv, если он находится внутри папки проекта.
exclude = [
    "**/__pycache__",
    ".venv/", # Явно указываем, что это папка, чтобы гарантировать исключение
    "**/.git",
    "**/*.pyc",
    "build",
    "dist",
    "storage", # Добавляем папку storage в исключения
]

[tool.flet.build.apk]
# Настройки для сборки APK
package_name = "com.dmitrimailov.worktimer"
build_number = 3
permissions = [
    "INTERNET",
    "ACCESS_NETWORK_STATE",
]

[tool.flet.android]
# Настройки для сборки под Android
split_per_abi = true